# jmim

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.github/workflows/: setupCli.yml
benchmark/: CMakeLists.txt  read_csv.cpp  read_file.cpp
cmd/: main.go
include/: MI.hpp  ReadPerms.h  ReadPerms.hpp  parse_csv.hpp
jmim/: jmim.go
scripts/: setup.ps1
src/: main.cpp
test/: AAPL.csv
tests/: test.go
tests/data/: AAPL.csv
utils/: ReadCSV.go
